--- a/package.json
+++ b/package.json
@@ -1,13 +1,64 @@
 {
-  "name": "react-native-gifted-chat",
-  "version": "0.6.0",
-  "description": "The most complete chat UI for React Native",
-  "main": "index.js",
-  "types": "index.d.ts",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/FaridSafi/react-native-gifted-chat.git"
+  "_args": [
+    [
+      "react-native-gifted-chat@0.2.9",
+      "/Users/hsan/Desktop/Boyout Motmaina/Native App"
+    ]
+  ],
+  "_from": "react-native-gifted-chat@0.2.9",
+  "_id": "react-native-gifted-chat@0.2.9",
+  "_inBundle": false,
+  "_integrity": "sha1-TIP0YfLp0xseXQm2QUm7Y7mmhW0=",
+  "_location": "/react-native-gifted-chat",
+  "_phantomChildren": {
+    "fbjs": "0.8.16",
+    "loose-envify": "1.3.1"
   },
+  "_requested": {
+    "type": "version",
+    "registry": true,
+    "raw": "react-native-gifted-chat@0.2.9",
+    "name": "react-native-gifted-chat",
+    "escapedName": "react-native-gifted-chat",
+    "rawSpec": "0.2.9",
+    "saveSpec": null,
+    "fetchSpec": "0.2.9"
+  },
+  "_requiredBy": [
+    "/"
+  ],
+  "_resolved": "https://registry.npmjs.org/react-native-gifted-chat/-/react-native-gifted-chat-0.2.9.tgz",
+  "_spec": "0.2.9",
+  "_where": "/Users/hsan/Desktop/Boyout Motmaina/Native App",
+  "author": {
+    "name": "Farid Safi"
+  },
+  "bugs": {
+    "url": "https://github.com/FaridSafi/react-native-gifted-chat/issues"
+  },
+  "dependencies": {
+    "@expo/react-native-action-sheet": "^1.0.1",
+    "md5": "2.2.1",
+    "moment": "^2.19.0",
+    "prop-types": "15.5.10",
+    "react-native-communications": "2.2.1",
+    "react-native-invertible-scroll-view": "^1.1.0",
+    "react-native-lightbox": "^0.7.0",
+    "react-native-parsed-text": "^0.0.19",
+    "shallowequal": "1.0.2",
+    "uuid": "3.1.0"
+  },
+  "description": "The most complete chat UI for React Native",
+  "devDependencies": {
+    "eslint": "3.19.0",
+    "eslint-config-airbnb": "15.0.2",
+    "eslint-config-cooperka": "0.2.3",
+    "eslint-plugin-import": "2.6.1",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.1.0",
+    "eslint-plugin-react-native": "2.3.2"
+  },
+  "homepage": "https://github.com/FaridSafi/react-native-gifted-chat#readme",
   "keywords": [
     "android",
     "ios",
@@ -18,65 +69,15 @@
     "message",
     "chat"
   ],
-  "author": "Farid Safi",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/FaridSafi/react-native-gifted-chat/issues"
+  "main": "index.js",
+  "name": "react-native-gifted-chat",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/FaridSafi/react-native-gifted-chat.git"
   },
-  "homepage": "https://github.com/FaridSafi/react-native-gifted-chat#readme",
   "scripts": {
-    "lint": "eslint . --ext .js,.jsx",
-    "precommit": "yarn lint",
-    "test": "jest --no-watchman",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "appr": "cd example-expo && ./setPRVersion.js && yarn && yarn appr",
-    "deploy": "cd example-expo && yarn install && exp login --username $EXP_USERNAME --password $EXP_PASSWORD && exp publish --non-interactive"
+    "lint": "eslint . --ext .js,.jsx"
   },
-  "jest": {
-    "preset": "react-native",
-    "setupFiles": [
-      "./tests/setup.js"
-    ],
-    "modulePathIgnorePatterns": [
-      "<rootDir>/example",
-      "<rootDir>/example-expo",
-      "<rootDir>/example-slack-message"
-    ]
-  },
-  "devDependencies": {
-    "@types/react": "^16.0.38",
-    "@types/react-native": "^0.52.12",
-    "babel": "6.23.0",
-    "babel-eslint": "10.0.1",
-    "babel-jest": "23.0.0",
-    "babel-preset-react-native": "4.0.0",
-    "eslint": "^4.9.0",
-    "eslint-config-airbnb": "16.1.0",
-    "eslint-config-cooperka": "0.2.9",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-    "eslint-plugin-react-native": "3.2.1",
-    "husky": "0.15.0-rc.2",
-    "jest": "22.1.4",
-    "prop-types": "15.6.2",
-    "react": "16.2.0",
-    "react-native": "0.51.0",
-    "react-test-renderer": "16.4.0"
-  },
-  "dependencies": {
-    "@expo/react-native-action-sheet": "^2.0.1",
-    "moment": "^2.19.0",
-    "react-native-communications": "2.2.1",
-    "react-native-lightbox": "^0.7.0",
-    "react-native-parsed-text": "^0.0.20",
-    "react-native-video": "^3.2.1",
-    "uuid": "3.3.0"
-  },
-  "peerDependencies": {
-    "prop-types": "*",
-    "react": "*",
-    "react-native": "*"
-  }
+  "version": "0.2.9"
 }
